[package]
name = "vsdg"
version = "0.1.0"
authors = ["bcata6 <b.catalin611@gmail.com>"]
repository = "https://github.com/lykenware/vsdg"
license = "MIT/Apache-2.0"
description = "VSDG (Value State Dependence Graph) optimizer."

[dependencies]
cranelift-codegen = "0.19.0"
cranelift-wasm = "0.19.0"
target-lexicon = "0.0.3"

[lib]
doctest = false
test = false
